[workspace]

[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "Solving Project Euler with Rust lang."
keywords = ["algebra", "algorithms", "computation", "mathematics", "numerics"]
license = "MIT"
name = "ProjectEulerRust"
readme = "README.md"
repository = "https://github.com/gifnksm/ProjectEulerRust"
version = "0.0.1"
edition = "2018"
default-run = "euler"

[lib]
name = "common"
path = "src/common.rs"

[dependencies]

[dev-dependencies]
rand = "0.9.0"
